yamls/deployment-endpointproxy (v1).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: endpointproxy
 namespace: test-projects
spec:
 selector:
   matchLabels:
     app: endpointproxy
 replicas: 1
 template:
   metadata:
     labels:
       app: endpointproxy
       version: v1
     annotations:
       sidecar.istio.io/inject: 'true'
   spec:
     containers:
       - name: endpointproxy
         image: stamacake/endpointproxy:1.0
         ports:
           - containerPort: 8090
