yamls/deployment-endpointproxy (v3).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: endpointproxy
 namespace: test-projects
spec:
 selector:
   matchLabels:
     app: endpointproxy
 replicas: 1
 template:
   metadata:
     labels:
       app: endpointproxy
       version: v3
     annotations:
       sidecar.istio.io/inject: 'true'
   spec:
     containers:
       - name: endpointproxy
         image: stamacake/endpointproxy:6.2
         ports:
           - containerPort: 8090
