yamls/deployment-to-external-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: to-external-depl
  namespace: test-projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-external-depl
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: to-external-depl
        version: v1
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: to-external-depl
          image: 'stamacake/endpointheadres:2.5'
          ports:
            - containerPort: 8081
              protocol: TCP
