yamls/service-endpoint.yaml
kind: Service
apiVersion: v1
metadata:
 name: endpoint
 namespace: test-projects
spec:
 ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
 selector:
   app: endpoint
