yamls/service-endpointproxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: endpointproxy
  namespace: test-projects
spec:
 ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 8080
 selector:
   app: endpointproxy
