yamls/destinationrule-egressgateway-for-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-external
  namespace: test-projects
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: toexternal-serviceentry
