yamls/serviceentry-toexternal-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: toexternal-serviceentry
  namespace: test-projects
spec:
  endpoints:
    - address: 192.168.0.10 #your local ip
      ports:
        http: 8050
  hosts:
    - outbound123.org
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: 80
      protocol: HTTP
  resolution: STATIC
