yamls/virtualservice-direct-external-through-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-external-through-egress-gateway
  namespace: test-projects
spec:
  gateways:
    - egress-gateway
    - mesh
  hosts:
    - outbound123.org
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 80
            subset: toexternal-serviceentry
    - match:
        - gateways:
            - egress-gateway
          port: 80
      route:
        - destination:
            host: outbound123.org
            port:
              number: 80
