yamls/virtualservice-endpointproxy for canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: endpointproxy
  namespace: test-projects
spec:
  gateways:
    - ingress-gateway
  hosts:
    - endpoint.org
  http:
    - route:
        - destination:
            host: endpointproxy
            subset: v1
          weight: 40
        - destination:
            host: endpointproxy
            subset: v2
          weight: 40
        - destination:
            host: endpointproxy
            subset: v3
          weight: 20
