yamls/virtualservice-endpointproxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: endpointproxy
  namespace: test-projects
spec:
  gateways:
    - ingress-gateway
  hosts:
    - endpoint.org
  http:
    - route:
        - destination:
            host: endpointproxy
